Add links to top navbar

--- a/modification.html
+++ b/modification.html
@@ -84,6 +84,9 @@
                     <li class="active">
                       <a href="modification.html">Modification</a>
                     </li>
+                    <li>
+                      <a href="deposit_values.html">Deposits</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
