--- a/selections.html
+++ b/selections.html
@@ -81,6 +81,12 @@
                     <li>
                       <a href="inspection.html">Inspection</a>
                     </li>
+                    <li>
+                      <a href="modification.html">Modification</a>
+                    </li>
+                    <li>
+                      <a href="deposit_values.html">Deposits</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
