--- a/traversals.html
+++ b/traversals.html
@@ -87,6 +87,9 @@
                     <li>
                       <a href="deposit_values.html">Deposits</a>
                     </li>
+                    <li>
+                      <a href="graph_series.html">Series</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
