--- a/deposit_values.html
+++ b/deposit_values.html
@@ -84,9 +84,9 @@
                     <li class="active">
                       <a href="deposit_values.html">Deposits</a>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://github.com/rich-iannone/DiagrammeR">GitHub</a></li>
+                    <li>
+                      <a href="graph_series.html">Series</a>
+                    </li>
                 </ul>
             </nav>
         </div>
