--- a/graph_series.html
+++ b/graph_series.html
@@ -103,7 +103,7 @@
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
                     <h1 id="graph-series" class="page-header">Graph Series</h1>
-                    <p class="lead">Storing values can be useful thing, especially in the context of traversals through a graph.</p>
+                    <p class="lead">Sometimes you'll need to have several graphs and make comparisons across them.</p>
                     <h2 id="create_series">`create_series`</h2>
                     <p></p>
                         <div>
