Modify all section titles and anchor links

--- a/graph_creation.html
+++ b/graph_creation.html
@@ -108,7 +108,7 @@
                 <div class="bs-docs-section">
                     <h1 id="graph-creation" class="page-header">Graph Creation</h1>
                     <p class="lead">These functions are used to create a graph object.</p>
-                    <h2 id="create_graph">`create_graph`</h2>
+                    <h2 id="creating-a-graph-object">Creating a Graph Object</h2>
                     <p>The <code>create_graph()</code> function creates a graph object. The function also allows for intialization of the graph name, the graph time (as a time with an optional time zone included), and any default attributes for the graph (i.e., graph, node, or edge attributes).</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -282,7 +282,7 @@ graph
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="render_graph">`render_graph`</h2>
+                    <h2 id="viewing-a-graph-object">Viewing a Graph Object</h2>
                     <p>With the <code>render_graph()</code> function, ...</p>
                     <p></p>
                         <div>
@@ -348,7 +348,7 @@ create_graph(nodes_df = nodes,
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="create_random_graph">`create_random_graph`</h2>
+                    <h2 id="creating-a-random-graph">Creating a 'Random' Graph</h2>
                     <p>With the <code>create_random_graph()</code> function, ...</p>
                     <p></p>
                         <div>
@@ -373,7 +373,7 @@ library(DiagrammeR)
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="combine_graphs">`combine_graphs`</h2>
+                    <h2 id="combining-graphs">Combining Graphs</h2>
                     <p>With the <code>combine_graphs()</code> function, ...</p>
                     <p></p>
                         <div>
@@ -398,7 +398,7 @@ library(DiagrammeR)
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="import_graph">`import_graph`</h2>
+                    <h2 id="importing-a-graph-from-a-file">Importing a Graph from a File</h2>
                     <p>The <code>import_graph()</code> function is all about loading in graphs from files. There are numerous graph file formats and while <strong>DiagrammeR</strong> does not support too many of them at this point, those formats that are supported are amongst the most well used. (Support for other file formats is forthcoming.) Thus far, <code>import_graph()</code> will import GraphML (<code>.graphml</code>), GML (<code>.gml</code>), and SIF (<code>.sif</code>) graph files. As with the <code>create_graph()</code> function, <code>import_graph()</code> allows for provision of a name and a date-time for the newly imported graph.</p>
                     <p></p>
                         <div>
@@ -457,11 +457,11 @@ sif_graph &lt;-
                         <li>
                             <a href="#graph-creation">Graph Creation</a>
                             <ul class="nav">
-                                <li><a href="#create_graph">`create_graph`</a></li>
-                                <li><a href="#render_graph">`render_graph`</a></li>
-                                <li><a href="#create_random_graph">`create_random_graph`</a></li>
-                                <li><a href="#combine_graphs">`combine_graphs`</a></li>
-                                <li><a href="#import_graph">`import_graph`</a></li>
+                                <li><a href="#creating-a-graph-object">Creating a Graph Object</a></li>
+                                <li><a href="#viewing-a-graph-object">Viewing a Graph Object</a></li>
+                                <li><a href="#creating-a-random-graph">Creating a 'Random' Graph</a></li>
+                                <li><a href="#combining-graphs">Combining Graphs</a></li>
+                                <li><a href="#importing-a-graph-from-a-file">Importing a Graph from a File</a></li>
                             </ul>
                         </li>
                     </ul>
