Modify section titles and anchor links

--- a/selections.html
+++ b/selections.html
@@ -108,7 +108,7 @@
                 <div class="bs-docs-section">
                     <h1 id="selections" class="page-header">Selections</h1>
                     <p class="lead">Selections are important because...</p>
-                    <h2 id="select_nodes">`select_nodes`</h2>
+                    <h2 id="creating-a-node-selection">Creating a Node Selection</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -129,8 +129,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="select_edges">`select_edges`</h2>
+                    <h2 id="creating-an-edge-selection">Creating an Edge Selection</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -151,8 +150,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="select_last_node_edge">`select_last_node`, `select_last_edge`</h2>
+                    <h2 id="selecting-the-last-node-edge-created">Selecting the Last Node/Edge Created</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -178,8 +176,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="select_nodes_by_id">`select_nodes_by_id`</h2>
+                    <h2 id="selecting-nodes-by-id-values">Selecting Nodes by ID Values</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -200,8 +197,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="select_nodes_in_neighborhood">`select_nodes_in_neighborhood`</h2>
+                    <h2 id="selecting-nodes-in-a-neighborhood">Selecting Nodes in a Neighborhood</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -222,8 +218,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="select_nodes_by_degree">`select_nodes_by_degree`</h2>
+                    <h2 id="selecting-nodes-by-their-degree">Selecting Nodes by their Degree</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -244,8 +239,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="invert_clear_selection">`invert_selection`, `clear_selection`</h2>
+                    <h2 id="inverting-and-clearing-a-selection">Inverting and Clearing a Selection</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -282,13 +276,13 @@
                         <li>
                             <a href="#selections">Selections</a>
                             <ul class="nav">
-                                <li><a href="#select_nodes">`select_nodes`</a></li>
-                                <li><a href="#select_edges">`select_edges`</a></li>
-                                <li><a href="#select_last_node_edge">`select_last_node`, `select_last_edge`</a></li>
-                                <li><a href="#select_nodes_by_id">`select_nodes_by_id`</a></li>
-                                <li><a href="#select_nodes_in_neighborhood">`select_nodes_in_neighborhood`</a></li>
-                                <li><a href="#select_nodes_by_degree">`select_nodes_by_degree`</a></li>
-                                <li><a href="#invert_clear_selection">`invert_selection`, `clear_selection`</a></li>
+                                <li><a href="#creating-a-node-selection">Creating a Node Selection</a></li>
+                                <li><a href="#creating-an-edge-selection">Creating an Edge Selection</a></li>
+                                <li><a href="#selecting-the-last-node-edge-created">Selecting the Last Node/Edge Created</a></li>
+                                <li><a href="#selecting-nodes-by-id-values">Selecting Nodes by ID Values</a></li>
+                                <li><a href="#selecting-nodes-in-a-neighborhood">Selecting Nodes in a Neighborhood</a></li>
+                                <li><a href="#selecting-nodes-by-their-degree">Selecting Nodes by their Degree</a></li>
+                                <li><a href="#inverting-and-clearing-a-selection">Inverting and Clearing a Selection</a></li>
                             </ul>
                         </li>
                     </ul>
