Modify section titles and anchor links

--- a/traversals.html
+++ b/traversals.html
@@ -108,7 +108,7 @@
                 <div class="bs-docs-section">
                     <h1 id="traversals" class="page-header">Traversals</h1>
                     <p class="lead">Traversals are important because...</p>
-                    <h2 id="trav_out_in_both">`trav_out`, `trav_in`, `trav_both`</h2>
+                    <h2 id="traversals-across-nodes">Traversals Across Nodes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -141,8 +141,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="trav_out_in_edge">`trav_out_edge`, `trav_in_edge`</h2>
+                    <h2 id="traversals-from-nodes-to-edges">Traversals from Nodes to Edges</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -169,8 +168,7 @@
 </code></pre>
                         </div>
                     </div>
-
-                    <h2 id="trav_out_in_node">`trav_out_node`, `trav_in_node`</h2>
+                    <h2 id="traversals-from-edges-to-nodes">Traversals from Edges to Nodes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -204,9 +202,9 @@
                         <li>
                             <a href="#traversals">Traversals</a>
                             <ul class="nav">
-                                <li><a href="#trav_out_in_both">`trav_out`, `trav_in`, `trav_both`</a></li>
-                                <li><a href="#trav_out_in_edge">`trav_out_edge`, `trav_in_edge`</a></li>
-                                <li><a href="#trav_out_in_node">`trav_out_node`, `trav_in_node`</a></li>
+                                <li><a href="#traversals-across-nodes">Traversals Across Nodes</a></li>
+                                <li><a href="#traversals-from-nodes-to-edges">Traversals from Nodes to Edges</a></li>
+                                <li><a href="#traversals-from-edges-to-nodes">Traversals from Edges to Nodes</a></li>
                             </ul>
                         </li>
                     </ul>
