Modify section titles and anchor links

--- a/inspection.html
+++ b/inspection.html
@@ -108,7 +108,7 @@
                 <div class="bs-docs-section">
                     <h1 id="inspection" class="page-header">Inspection</h1>
                     <p class="lead">Inspection is important because...</p>
-                    <h2 id="node_edge_info">`node_info`, `edge_info`</h2>
+                    <h2 id="getting-summary-info-on-nodes-or-edges">Getting Summary Info on Nodes or Edges</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -135,7 +135,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="node_edge_present">`node_present`, `edge_present`</h2>
+                    <h2 id="determining-whether-a-node-or-edge-is-present">Determining Whether a Node or Edge is Present</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -162,7 +162,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_nodes_edges">`get_nodes`, `get_edges`</h2>
+                    <h2 id="getting-a-collection-of-nodes-or-edges">Getting a Collection of Nodes or Edges</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -188,7 +188,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_predecessors_successors">`get_predecessors`, `get_successors`</h2>
+                    <h2 id="getting-the-predecessors-or-successors-of-a-node">Getting the Predecessors or Successors of a Node</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -214,7 +214,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_node_edge_df">`get_node_df`, `get_edge_df`</h2>
+                    <h2 id="extracting-ndfs-or-edfs-from-a-graph">Extracting NDFs or EDFs from a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -240,7 +240,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="node_edge_count">`node_count`, `edge_count`</h2>
+                    <h2 id="getting-counts-of-nodes-or-edges">Getting Counts of Nodes or Edges</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -266,7 +266,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="is_graph_empty_directed">`is_graph_empty`, `is_graph_directed`</h2>
+                    <h2 id="is-the-graph-empty-directed">Is the Graph Empty? Directed?</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -292,7 +292,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_global_graph_attr">`get_global_graph_attr`</h2>
+                    <h2 id="getting-the-graphs-global-attributes">Getting the Graph's Global Attributes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -312,7 +312,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_selection">`get_selection`</h2>
+                    <h2 id="getting-the-current-selection-of-nodes-edges">Getting the Current Selection of Nodes/Edges</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -332,7 +332,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="get_paths">`get_paths`</h2>
+                    <h2 id="obtaining-path-information-from-a-graph">Obtaining Path Information from a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -360,16 +360,16 @@
                         <li>
                             <a href="#inspection">Inspection</a>
                             <ul class="nav">
-                                <li><a href="#node_edge_info">`node_info`, `edge_info`</a></li>
-                                <li><a href="#node_edge_present">`node_present`, `edge_present`</a></li>
-                                <li><a href="#get_nodes_edges">`get_nodes`, `get_edges`</a></li>
-                                <li><a href="#get_predecessors_successors">`get_predecessors`, `get_successors`</a></li>
-                                <li><a href="#get_node_edge_df">`get_node_df`, `get_edge_df`</a></li>
-                                <li><a href="#node_edge_count">`node_count`, `edge_count`</a></li>
-                                <li><a href="#is_graph_empty_directed">`is_graph_empty`, `is_graph_directed`</a></li>
-                                <li><a href="#get_global_graph_attr">`get_global_graph_attr`</a></li>
-                                <li><a href="#get_selection">`get_selection`</a></li>
-                                <li><a href="#get_paths">`get_paths`</a></li>
+                                <li><a href="#getting-summary-info-on-nodes-or-edges">Getting Summary Info on Nodes or Edges</a></li>
+                                <li><a href="#determining-whether-a-node-or-edge-is-present">Determining Whether a Node or Edge is Present</a></li>
+                                <li><a href="#getting-a-collection-of-nodes-or-edges">Getting a Collection of Nodes or Edges</a></li>
+                                <li><a href="#getting-the-predecessors-or-successors-of-a-node">Getting the Predecessors or Successors of a Node</a></li>
+                                <li><a href="#extracting-ndfs-or-edfs-from-a-graph">Extracting NDFs or EDFs from a Graph</a></li>
+                                <li><a href="#getting-counts-of-nodes-or-edges">Getting Counts of Nodes or Edges</a></li>
+                                <li><a href="#is-the-graph-empty-directed">Is the Graph Empty? Directed?</a></li>
+                                <li><a href="#getting-the-graphs-global-attributes">Getting the Graph's Global Attributes</a></li>
+                                <li><a href="#getting-the-current-selection-of-nodes-edges">Getting the Current Selection of Nodes/Edges</a></li>
+                                <li><a href="#obtaining-path-information-from-a-graph">Obtaining Path Information from a Graph</a></li>
                             </ul>
                         </li>
                     </ul>
