Modify section titles and anchor links

--- a/modification.html
+++ b/modification.html
@@ -108,7 +108,7 @@
                 <div class="bs-docs-section">
                     <h1 id="modification" class="page-header">Modification</h1>
                     <p class="lead">Modification is important because...</p>
-                    <h2 id="add_node_edge">`add_node`, `add_edge`</h2>
+                    <h2 id="adding-a-node-or-edge-to-a-graph">Adding a Node or Edge to a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -135,7 +135,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="add_node_edge_df">`add_node_df`, `add_edge_df`</h2>
+                    <h2 id="adding-an-ndf-or-edf-to-a-graph">Adding an NDF or EDF to a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -162,7 +162,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="add_n_nodes">`add_n_nodes`</h2>
+                    <h2 id="adding-several-new-nodes-to-a-graph">Adding Several New Nodes to a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -183,7 +183,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="add_n_nodes_from_to_selection">`add_n_nodes_from_selection`, `add_n_nodes_to_selection`</h2>
+                    <h2 id="adding-several-new-nodes-to-or-from-a-selection-of-nodes">Adding Several New Nodes to or from a Selection of Nodes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -210,7 +210,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="add_nodes_edges_from_df">`add_nodes_from_df`, `add_edges_from_df`</h2>
+                    <h2 id="adding-nodes-or-edges-from-a-data-frame">Adding Nodes or Edges from a Data Frame</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -237,7 +237,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="add_nodes_edges_from_csv">`add_nodes_from_csv`, `add_edges_from_csv`</h2>
+                    <h2 id="adding-nodes-or-edges-from-a-csv-file">Adding Nodes or Edges from a CSV File</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -264,7 +264,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="delete_node_edge">`delete_node`, `delete_edge`</h2>
+                    <h2 id="deleting-a-node-or-edge-from-a-graph">Deleting a Node or Edge from a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -291,7 +291,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="delete_nodes_edges_in_selection">`delete_nodes_in_selection`, `delete_edges_in_selection`</h2>
+                    <h2 id="deleting-nodes-or-edges-using-a-selection">Deleting Nodes or Edges Using a Selection</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -318,7 +318,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="node_type">`node_type`</h2>
+                    <h2 id="working-with-the-node-type-attribute">Working with the Node <code>type</code> Attribute</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -339,7 +339,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="edge_rel">`edge_rel`</h2>
+                    <h2 id="working-with-the-edge-rel-attribute">Working with the Edge <code>rel</code> Attribute</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -360,7 +360,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="create_subgraph_from_selection">`create_subgraph_from_selection`</h2>
+                    <h2 id="creating-a-subgraph">Creating a Subgraph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -381,7 +381,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="set_graph_name_time">`set_graph_name`, `set_graph_time`</h2>
+                    <h2 id="setting-a-graphs-name-and-time-attributes">Setting a Graph's Name and Time Attributes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -408,7 +408,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="set_global_graph_attr">`set_global_graph_attr`</h2>
+                    <h2 id="setting-global-attributes-for-a-graph">Setting Global Attributes for a Graph</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -429,7 +429,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="set_node_edge_attr_with_selection">`set_node_attr`, `set_edge_attr`, `set_node_attr_with_selection`, `set_edge_attr_with_selection`</h2>
+                    <h2 id="setting-node-or-edge-attributes">Setting Node or Edge Attributes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -468,7 +468,7 @@
 </code></pre>
                         </div>
                     </div>
-                    <h2 id="rescale_node_edge_attr_in_selection">`rescale_node_attr_in_selection`, `rescale_edge_attr_in_selection`</h2>
+                    <h2 id="rescaling-node-and-edge-attributes">Rescaling Node and Edge Attributes</h2>
                     <p></p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
@@ -503,21 +503,21 @@
                         <li>
                             <a href="#modification">Modification</a>
                             <ul class="nav">
-                                <li><a href="#add_node_edge">`add_node`, `add_edge`</a></li>
-                                <li><a href="#add_node_edge_df">`add_node_df`, `add_edge_df`</a></li>
-                                <li><a href="#add_n_nodes">`add_n_nodes`</a></li>
-                                <li><a href="#add_n_nodes_from_to_selection">`add_n_nodes_from_selection`, `add_n_nodes_to_selection`</a></li>
-                                <li><a href="#add_nodes_edges_from_df">`add_nodes_from_df`, `add_edges_from_df`</a></li>
-                                <li><a href="#add_nodes_edges_from_csv">`add_nodes_from_csv`, `add_edges_from_csv`</a></li>
-                                <li><a href="#delete_node_edge">`delete_node`, `delete_edge`</a></li>
-                                <li><a href="#delete_nodes_edges_in_selection">`delete_nodes_in_selection`, `delete_edges_in_selection`</a></li>
-                                <li><a href="#node_type">`node_type`</a></li>
-                                <li><a href="#edge_rel">`edge_rel`</a></li>
-                                <li><a href="#create_subgraph_from_selection">`create_subgraph_from_selection`</a></li>
-                                <li><a href="#set_graph_name_time">`set_graph_name`, `set_graph_time`</a></li>
-                                <li><a href="#set_global_graph_attr">`set_global_graph_attr`</a></li>
-                                <li><a href="#set_node_edge_attr_with_selection">`set_node_attr`, `set_edge_attr`, `set_node_attr_with_selection`, `set_edge_attr_with_selection`</a></li>
-                                <li><a href="#rescale_node_edge_attr_in_selection">`rescale_node_attr_in_selection`, `rescale_edge_attr_in_selection`</a></li>
+                                <li><a href="#adding-a-node-or-edge-to-a-graph">Adding a Node or Edge to a Graph</a></li>
+                                <li><a href="#adding-an-ndf-or-edf-to-a-graph">Adding an NDF or EDF to a Graph</a></li>
+                                <li><a href="#adding-several-new-nodes-to-a-graph">Adding Several New Nodes to a Graph</a></li>
+                                <li><a href="#adding-several-new-nodes-to-or-from-a-selection-of-nodes">Adding Several New Nodes to or from a Selection of Nodes</a></li>
+                                <li><a href="#adding-nodes-or-edges-from-a-data-frame">Adding Nodes or Edges from a Data Frame</a></li>
+                                <li><a href="#adding-nodes-or-edges-from-a-csv-file">Adding Nodes or Edges from a CSV File</a></li>
+                                <li><a href="#deleting-a-node-or-edge-from-a-graph">Deleting a Node or Edge from a Graph</a></li>
+                                <li><a href="#deleting-nodes-or-edges-using-a-selection">Deleting Nodes or Edges Using a Selection</a></li>
+                                <li><a href="#working-with-the-node-type-attribute">Working with the Node <code>type</code> Attribute</a></li>
+                                <li><a href="#working-with-the-edge-rel-attribute">Working with the Edge <code>rel</code> Attribute</a></li>
+                                <li><a href="#creating-a-subgraph">Creating a Subgraph</a></li>
+                                <li><a href="#setting-a-graphs-name-and-time-attributes">Setting a Graph's Name and Time Attributes</a></li>
+                                <li><a href="#setting-global-attributes-for-a-graph">Setting Global Attributes for a Graph</a></li>
+                                <li><a href="#setting-node-or-edge-attributes">Setting Node or Edge Attributes</a></li>
+                                <li><a href="#rescaling-node-and-edge-attributes">Rescaling Node and Edge Attributes</a></li>
                             </ul>
                         </li>
                     </ul>
