--- a/modification.html
+++ b/modification.html
@@ -469,7 +469,7 @@
                         </div>
                     </div>
                     <h2 id="rescaling-node-and-edge-attributes">Rescaling Node and Edge Attributes</h2>
-                    <p></p>
+                    <p>Mainly for purposes of scaling data values to values supplied to aesthetics, the <code>rescale_node_attr_in_selection()</code> and <code>rescale_edge_attr_in_selection()</code> functions are available.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
