--- a/modification.html
+++ b/modification.html
@@ -430,7 +430,7 @@
                         </div>
                     </div>
                     <h2 id="setting-node-or-edge-attributes">Setting Node or Edge Attributes</h2>
-                    <p></p>
+                    <p>A group of functions is provided for workingg with node and edge attributes.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
