--- a/modification.html
+++ b/modification.html
@@ -109,7 +109,7 @@
                     <h1 id="modification" class="page-header">Modification</h1>
                     <p class="lead">Modification is important because...</p>
                     <h2 id="adding-a-node-or-edge-to-a-graph">Adding a Node or Edge to a Graph</h2>
-                    <p></p>
+                    <p>The <code>add_node()</code> and <code>add_edge()</code> functions provide a facility for adding a single node or edge to an existing graph. Although you may prepare node data frames (<em>NDF</em>s) or edge data frames (<em>EDF</em>s) and incorporate those into a new graph object with the <code>create_graph()</code> function, there may be new nodes or edges to add after creation of the graph object (say, as new data becomes available). After calling either of these functions, the new node or edge becomes part of the graph's internal <em>NDF</em> or <em>EDF</em>, respectively.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
@@ -133,6 +133,45 @@
 # Title
 ###
 
+library(DiagrammeR)
+library(magrittr)
+
+# Create an empty graph
+graph &lt;- create_graph()
+
+# Add two nodes, they will be given ID values that
+# are monotonically increasing from `1`
+graph &lt;- add_node(graph)
+graph &lt;- add_node(graph)
+
+# Get the node ID values
+get_nodes(graph)
+#> [1] "1" "2"
+
+# Show the graph's internal NDF
+get_node_df(graph)
+#>   nodes   type label
+#> 1     1            1
+#> 2     2            2
+
+# Create the same graph with magrittr `%>%` pipes
+graph &lt;-
+  create_graph() %>% add_node %>% add_node
+
+# Show the graph's internal NDF
+get_node_df(graph)
+#>   nodes   type label
+#> 1     1            1
+#> 2     2            2
+
+# Add an edge between the two nodes
+graph &lt;-
+  graph %>% add_edge(1, 2)
+
+# Show the graph's internal EDF
+get_edge_df(graph)
+#>   from to rel
+#> 1    1  2
 </code></pre>
                         </div>
                     </div>
